--- a/ppom-src/templates/hello.cshtml
+++ b/ppom-src/templates/hello.cshtml
@@ -1,6 +1,5 @@
-@model String
 @{
-    Layout = "page";
-    ViewData["Title"] = "karl some value";
+    Layout = "layout.cshtml";
 }
+
 Hello @Model, welcome to Razor World!
