--- a/ppom-src/templates/listing.cshtml
+++ b/ppom-src/templates/listing.cshtml
@@ -62,7 +62,7 @@
     }
 
     <div class="shop-listing-description">
-      {{ITEM_DESCRIPTION}}
+        @Raw(@ViewBag.PRODUCT_DESCRIPTION)
     </div>
 
   </div>
