--- a/ppom-src/templates/listing.cshtml
+++ b/ppom-src/templates/listing.cshtml
@@ -8,7 +8,7 @@
 <nav class="breadcrumb-nav">
   <a href="/">All Products</a>
   <span class="shop-breadcrumb-separator">&gt;</span>
-  <a href="@ViewBag.CATEGORY_PATH">@ViewBag.CATEGORY_NAME</a>
+  <a href="/shop/@ViewBag.CategoryId/">@ViewBag.CategoryName</a>
   <span class="shop-breadcrumb-separator">&gt;</span>
   @Model.Name
 </nav>
@@ -83,7 +83,7 @@
     }
 
     <div class="shop-listing-description">
-        @Raw(@ViewBag.PRODUCT_DESCRIPTION)
+        @Raw(@ViewBag.ProductDescription)
     </div>
 
   </div>
