--- a/include/main.less
+++ b/include/main.less
@@ -219,16 +219,6 @@ h1.shop-page-title {
     margin-bottom: 10px;
 }
 
-h2.shop-category-subhead {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-family: @accent_font_serif;
-    font-weight: normal;
-    font-size: 16px;
-    text-align: center;
-}
-
-
 // Main Page
 #frontPage h1 {
     margin-top: 30px;
@@ -281,6 +271,16 @@ img.shop-overview-thumb {
     padding-top: 20px;
     padding-bottom: 30px;
 }
+.shop-category-description {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: @accent_font_serif;
+    font-weight: normal;
+    font-size: 16px;
+    text-align: center;
+}
+
+
 
 
 // Listing (product detail page)
