--- a/ppom-src/templates/category.cshtml
+++ b/ppom-src/templates/category.cshtml
@@ -12,9 +12,8 @@
 
 <h1 class="shop-page-title">@Model.Category.Name</h1>
 
-<!-- workaround for razor Empty Raw bug: https://github.com/toddams/RazorLight/issues/172 -->
-@if (Model.Category.Description != "") {
-  <h2 class="shop-category-subhead">@Raw(Model.Category.Description)</h2>
+@if (Model.Category.Description != null) {
+  <div class="shop-category-description">@Raw(Model.Category.Description)</div>
 }
 
 <div id="categoryGallery">
