--- a/include/main.less
+++ b/include/main.less
@@ -248,30 +248,7 @@ h1.shop-page-title {
 
 
 // Category page
-// subcategory
-#categoryGallery > h2 {  
-    margin-top: 0;
-    font-size: 20px;
-    color: gray;
-    border-bottom: 1px solid gray;
-}
-// the product name
-#categoryPage .shop-category-row h2,
-#categoryPage .shop-category-row h3 {
-    margin-top: 0;
-    font-size: 20px;
-}
-img.shop-overview-thumb {
-    xxfloat: left;
-    xxmargin-right: 10px;
-    border: 1px solid gray;
-    max-width: 100%;
-}
-.shop-overview-cell {
-    padding-top: 20px;
-    padding-bottom: 30px;
-}
-.shop-category-description {
+#categoryPage .category-description {
     margin-top: 10px;
     margin-bottom: 10px;
     font-family: @accent_font_serif;
@@ -279,8 +256,26 @@ img.shop-overview-thumb {
     font-size: 16px;
     text-align: center;
 }
-
-
+#categoryPage .subcategory-header {  
+    margin-top: 0;
+    font-size: 20px;
+    color: gray;
+    border-bottom: 1px solid gray;
+}
+#categoryPage .product-cell {
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+#categoryPage .product-header {
+    margin-top: 0;
+    font-size: 20px;
+}
+#categoryPage .product-image {
+    xxfloat: left;
+    xxmargin-right: 10px;
+    border: 1px solid gray;
+    max-width: 100%;
+}
 
 
 // Listing (product detail page)
