--- a/ppom-src/templates/category.cshtml
+++ b/ppom-src/templates/category.cshtml
@@ -26,7 +26,7 @@
 
     @foreach (var chunk in ppom.Extensions.SplitChunks(subCategory.Listings, 3)) {
 
-      <div class="row shop-category-row">
+      <div class="row">
 
         @foreach (var product in chunk) {
 
