--- a/include/main.less
+++ b/include/main.less
@@ -219,6 +219,7 @@ h1.shop-page-title {
     margin-bottom: 10px;
 }
 
+
 // Main Page
 #frontPage h1 {
     margin-top: 30px;
@@ -228,7 +229,7 @@ h1.shop-page-title {
 }
 #frontPage h2 {
     font-family: @accent_font_sans;
-    xxfont-weight: normal;
+    //font-weight: normal;
     font-size: 26px;
     text-align: center;
 }
@@ -240,10 +241,6 @@ h1.shop-page-title {
 #frontPage .front-img {
     max-width: 100%;
     margin-bottom: 20px;
-}
-
-.article {
-    xxborder: 1px dashed blue;
 }
 
 
@@ -271,8 +268,8 @@ h1.shop-page-title {
     font-size: 20px;
 }
 #categoryPage .product-image {
-    xxfloat: left;
-    xxmargin-right: 10px;
+    //float: left;
+    //margin-right: 10px;
     border: 1px solid gray;
     max-width: 100%;
 }
@@ -283,23 +280,23 @@ h1.shop-page-title {
     margin-top: 0;
     font-family: @accent_font_serif;
 }
-div.shop-listing-gallery {
+#listingPage .product-gallery {
     margin-bottom: 20px;
 }
-div.shop-listing-description {
+#listingPage .product-description {
     margin-top: 2em;
 }
-div.shop-listing-description hr {
+#listingPage .product-description hr {
     border: none;
     border-top: 1px dashed @accent_color;
 }
-div.shop-listing-description h3,
-div.shop-listing-description h2
+#listingPage .product-description h3,
+#listingPage .product-description h2
 {
     font-family: @accent_font_script;
     font-size: 22px;
 }
-img.xzoom-gallery {
+#listingPage img.xzoom-gallery {
     max-height: 100px;
 }
 
