--- a/ppom-src/templates/listing.cshtml
+++ b/ppom-src/templates/listing.cshtml
@@ -13,8 +13,8 @@
   @Model.Name
 </nav>
 
-<div class="row shop-listing">
-  <div class="col-md-7 shop-listing-gallery">
+<div class="row">
+  <div class="col-md-7 product-gallery">
 
     <!-- start gallery -->
     <div class="xzoom-container">
@@ -82,7 +82,7 @@
 
     }
 
-    <div class="shop-listing-description">
+    <div class="product-description">
         @Raw(Model.Description)
     </div>
 
