--- a/ppom-src/templates/error.cshtml
+++ b/ppom-src/templates/error.cshtml
@@ -1,8 +1,9 @@
-{{PAGE_HEADER}}
+@{
+    ViewBag.Title = "Patterned Pomegranate: Page Not Found";
+    ViewBag.PageId = "errorPage";
+    Layout = "layout.cshtml";
+}
 
 <h1 class="shop-page-title">Page Not Found</h1>
 
 <p>Sorry, but that page or item does not exist.</p>
-
-{{PAGE_FOOTER}}
-
