--- a/source/SiteBuilder/templates/layout.cshtml
+++ b/source/SiteBuilder/templates/layout.cshtml
@@ -89,7 +89,7 @@
 <script src="/include/pswp/photoswipe.min.js"></script> 
 <script src="/include/pswp/photoswipe-ui-default.min.js"></script> 
 
-<script src="/include/@MYCART_JS"></script>
+<script src="@MYCART_JS"></script>
 
 <script>
 
