--- a/source/SiteBuilder/templates/blog-archive.cshtml
+++ b/source/SiteBuilder/templates/blog-archive.cshtml
@@ -16,7 +16,7 @@
     @foreach (var post in yearList.posts.OrderBy(x => x.Title)) {
 
         <li>
-            <a href="@post.path">@post.Title</a>
+            <a href="@post.Path">@post.Title</a>
         </li>
 
     }
