--- a/source/SiteBuilder/templates/blog.cshtml
+++ b/source/SiteBuilder/templates/blog.cshtml
@@ -9,7 +9,7 @@
   <a href="/blog/">&lt; Blog Archive</a>
 </nav>
 
-<h1 style="text-align: left" class="shop-page-title">@Model.Title</h1>
+<h1>@Model.Title</h1>
 
 <div class="row">
   <div class="blog-post col-md-8">
