--- a/assets/include/main.less
+++ b/assets/include/main.less
@@ -210,13 +210,26 @@ a.viewall {
 }
 
 
-/* wide page title */
-h1.shop-page-title {
+// Titles
+#aboutPage h1,
+#blogArchivePage h1,
+#blogPage h1,
+#cartPage h1,
+#categoryPage h1,
+#errorPage h1,
+#receiptPage h1
+{
     margin-top: 20px;
     font-family: @accent_font_script;
     font-size: 44px;
     text-align: center;
     margin-bottom: 10px;
+}
+
+#blogArchivePage h1,
+#blogPage h1
+{
+    text-align: left;
 }
 
 
@@ -375,7 +388,7 @@ h1.shop-page-title {
 #blogPage .blog-post {
     xxxborder: 1px dotted blue;
 }
-#blogPage h1.shop-page-title {
+#blogPage h1 {
     font-size: 45px;
     padding-top: 20px;
     padding-bottom: 10px;
