--- a/source/SiteBuilder/templates/about.cshtml
+++ b/source/SiteBuilder/templates/about.cshtml
@@ -4,7 +4,7 @@
     Layout = "layout.cshtml";
 }
 
-<h1 class="shop-page-title">About Patterned Pomegranate</h1>
+<h1>About Patterned Pomegranate</h1>
 
 <div class="row">
   <div class="col-sm-6 col-md-4 article">
