--- a/source/SiteBuilder/templates/category.cshtml
+++ b/source/SiteBuilder/templates/category.cshtml
@@ -10,7 +10,7 @@
   @Model.Category.Name
 </nav>
 
-<h1 class="shop-page-title">@Model.Category.Name</h1>
+<h1>@Model.Category.Name</h1>
 
 @if (Model.Category.Description != null) {
   <div class="category-description">@Raw(Model.Category.Description)</div>
