--- a/source/SiteBuilder/templates/error.cshtml
+++ b/source/SiteBuilder/templates/error.cshtml
@@ -4,6 +4,6 @@
     Layout = "layout.cshtml";
 }
 
-<h1 class="shop-page-title">Page Not Found</h1>
+<h1>Page Not Found</h1>
 
 <p>Sorry, but that page or item does not exist.</p>
