--- a/source/SiteBuilder/templates/cart.cshtml
+++ b/source/SiteBuilder/templates/cart.cshtml
@@ -8,7 +8,7 @@
   <a href="/">&lt; Continue Shopping</a>
 </nav>
 
-<h1 class="shop-page-title">Shopping Cart</h1>
+<h1>Shopping Cart</h1>
 
 <div class="row">
   <div class="col-lg-10 col-lg-offset-1">
