--- a/source/SiteBuilder/templates/receipt.cshtml
+++ b/source/SiteBuilder/templates/receipt.cshtml
@@ -4,7 +4,7 @@
     Layout = "layout.cshtml";
 }
 
-<h1 class="shop-page-title">Thank you for your order</h1>
+<h1>Thank you for your order</h1>
 
 @Raw(ViewBag.FileData.GetMarkdownHTML("about/receipt.md"))
 
