--- a/assets/include/main.less
+++ b/assets/include/main.less
@@ -40,8 +40,6 @@ ul {
     padding-left: 1.5em;
     position: relative;
 }
-li {
-}
 ul li:before {
     content: "\0BB";
     color: @accent_color;
@@ -50,6 +48,9 @@ ul li:before {
 }
 ul.NOSTYLE li:before {
     content: "";
+}
+ol {
+    padding-left: 1.5em;
 }
 .text-medium {
     font-size: 18px;
