--- a/assets/include/main.less
+++ b/assets/include/main.less
@@ -391,17 +391,26 @@ a.viewall {
     color: green;
     background-color: yellow;
 }
-#blogPage .blog-post img:not(.fullwidth) {
+#blogPage .blog-post img:not(.header) {
     float: right;
-    xbox-shadow: 2px 2px 15px #ccc;
+    max-width: 50%;
     margin-left: 10px;
     margin-bottom: 10px;
-    max-width: 50%;
 }
-#blogPage .blog-post img.fullwidth {
+#blogPage .blog-post img.header {
     display: block;
     max-width: 100%;
     height: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+#blogPage .blog-post img.centered {
+    float: none;
+    display: block;
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
     margin-bottom: 15px;
 }
 #blogPage .sidebar-etsy {
