--- a/source/SiteBuilder/templates/error.cshtml
+++ b/source/SiteBuilder/templates/error.cshtml
@@ -6,4 +6,5 @@
 
 <h1>Page Not Found</h1>
 
-<p>Sorry, but that page or item does not exist.</p>
+@Raw(ViewBag.FileData.GetMarkdownHTML("404-page-text.md"))
+
