--- a/assets/include/main.less
+++ b/assets/include/main.less
@@ -171,7 +171,7 @@ input.addCart {
 // Logo, navbar 
 .top_header {
     background-color: white;
-    background-image: url('/include/headervines.jpg');
+    //background-image: url('/include/headervines.jpg');
     border-bottom: 1px solid #dcdcdc;
     margin-left: -15px;
     margin-right: -15px;
